feat: implement DefaultMethodValidator and enhance HTTP method validation